fix: fix input button styling on safari

--- a/static/pulsar.css
+++ b/static/pulsar.css
@@ -15,3 +15,13 @@ h1 {
 p {
   margin-bottom: 2.5px;
 }
+
+textarea,
+input.text,
+input[type="text"],
+input[type="button"],
+input[type="submit"],
+.input-checkbox {
+  -webkit-appearance: none;
+  border-radius: 0;
+}
